add amap, update package

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
   </body>
 </html>
