--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
+    <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   </body>
 </html>
