--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="<%= BASE_URL %>js/lib-flexible.js"></script>
     <title>cli3_demo</title>
   </head>
   <body>
