--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
+    <script src="//webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
     <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
     <script src="//at.alicdn.com/t/font_221319_qmosp7x55kc.js"></script>
   </body>
