--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="cleartype" content="on">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script src="<%= BASE_URL %>js/lib-flexible.js"></script>
-    <title>cli3_demo</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script src="//webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
-    <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-    <script src="//at.alicdn.com/t/font_221319_qmosp7x55kc.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="cleartype" content="on">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <script src="<%= BASE_URL %>js/lib-flexible.js"></script>
+  <title>cli3_demo</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <script src="//webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
+  <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+  <script src="//at.alicdn.com/t/font_221319_qmosp7x55kc.js"></script>
+  <script src="js/service-wroker.js"></script>
+</body>
+
 </html>
