--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <script src="//webapi.amap.com/maps?v=1.4.11&key=170798865d0f943e610cd00a62fb5215"></script>
   <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   <script src="//at.alicdn.com/t/font_221319_qmosp7x55kc.js"></script>
-  <script src="js/service-wroker.js"></script>
+  <!-- <script src="js/service-wroker.js"></script> -->
 </body>
 
 </html>
