--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
   <meta http-equiv="cleartype" content="on">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes" />
   <meta name="HandheldFriendly" content="True">
-  <meta name="format-detection" content="telephone=no">
+  <meta name="apple-touch-fullscreen" content="yes"/>
+  <meta name="format-detection" content="telephone=no, email=no">
   <meta name="viewport"
-    content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
+    content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no, viewport-fit=cover">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script src="<%= BASE_URL %>js/lib-flexible.js"></script>
   <title>cli3_demo</title>
