feat: add directive

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   <script src="//at.alicdn.com/t/font_221319_qmosp7x55kc.js"></script>
   <!-- <script src="js/service-wroker.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bs-store/dist/bs-store.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bs-store/dist/bs-store-lz-string.min.js"></script> -->
 </body>
 
 </html>
